<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Settings">
    <EditTextPreference
        android:defaultValue="10"
        android:hint="Between 1 and 50"
        android:inputType="numberDecimal"
        android:key="number_of_items"
        android:selectAllOnFocus="true"
        android:title="Number Of Items" />
    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />
    <PreferenceCategory android:title="Customize Styles"
        >
    <ListPreference
        android:defaultValue="@string/settings_color_default"
        android:entries="@array/settings_color_labels"
        android:entryValues="@array/settings_color_values"
        android:key="@string/settings_color_key"
        android:title="@string/settings_color_label" />

    <ListPreference
        android:defaultValue="@string/settings_text_size_default"
        android:entries="@array/settings_text_size_labels"
        android:entryValues="@array/settings_text_size_values"
        android:key="@string/settings_text_size_key"
        android:title="@string/settings_text_size_label" />
    </PreferenceCategory>
</PreferenceScreen>